--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <script src="./resources/functions.js"></script>
         <script src="./resources/ol.js"></script>
         <script src="./resources/ol3-layerswitcher.js"></script>
-        <script src="layers/outalltracks_1.js"></script><script src="layers/outalltrack_points_2.js"></script>
-        <script src="styles/outalltracks_1_style.js"></script><script src="styles/outalltrack_points_2_style.js"></script>
+        <script src="layers/tvonal_1.js"></script><script src="layers/fotkhtrkp_2.js"></script><script src="layers/fotk_3.js"></script>
+        <script src="styles/tvonal_1_style.js"></script><script src="styles/fotkhtrkp_2_style.js"></script><script src="styles/fotk_3_style.js"></script>
         <script src="./layers/layers.js" type="text/javascript"></script> 
         <script src="./resources/qgis2web.js"></script>
         <script src="./resources/Autolinker.min.js"></script>
